Version 1.1.0
    - Renamed the existing example application to be a "grass and
      rivers" example application. This paves the way for future example
      applications to be created.
    - Added ability to arbitrarily restrict the size and shape of maps
      using a map tile location filter.
    - Added ability to arbitrarily specify how map tile edges match with
      other map tile edges.

Version 1.0.0
    - Initial FlexGen release.