@@ -301,6 +301,10 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
         <java classname="org.flexgen.example.RiverExample" classpathref="classpath.run.example" />
     </target>
 
+    <target name="run.example.dungeon" depends="jar.example">
+        <java classname="org.flexgen.example.DungeonExample" classpathref="classpath.run.example" />
+    </target>
+
     <target name="javadoc.developer" depends="init">
         <mkdir dir="${dir.javadoc.developer}" />
         <javadoc destdir="${dir.javadoc.developer}" access="private"
@@ -466,6 +470,9 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
         <echo message=""                                                                />
         <echo message="run.example.river"                                               />
         <echo message="    Run the FlexGen grass and rivers example application."       />
+        <echo message=""                                                                />
+        <echo message="run.example.dungeon"                                             />
+        <echo message="    Run the FlexGen dungeon example application."                />
         <echo message=""                                                                />
         <echo message="javadoc.developer"                                               />
         <echo message="    Generate the FlexGen Developer Javadoc documentation."       />
